--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- icon damani_svg.jpeg -->
+    <link rel="icon" type="image/svg+xml" href="/damani_svg.jpeg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/dam" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Damani Nexus - Tech for Every Terrain. Innovative technology solutions for SMEs, GIS, health informatics, and agriculture across East Africa." />
     <meta name="keywords" content="technology solutions, GIS services, remote sensing, IoT, health informatics, agriculture technology, Kenya, Nairobi" />
